--- a/php-redis/index.html
+++ b/php-redis/index.html
@@ -12,8 +12,8 @@
     <form>
     <fieldset>
     <input ng-model="msg" placeholder="Messages" class="form-control" type="text" name="input"><br>
-    <button type="button" class="btn btn-primary btn-lg" ng-click="controller.onRedis()">Submit</button>  
-  </fieldset>
+    <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="controller.onRedis()">Submit</button>
+    </fieldset>
   
     </form>
     <div>
